--- a/Client_pro/handleclient.plist
+++ b/Client_pro/handleclient.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://git.oschina.net/handlecar/HandleApp/raw/master/client_pro/handleclient.ipa</string>
+					<string>https://github.com/handlecarios/Handlercar_app/raw/master/Client_pro/handleclient.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
