--- a/Client_pro/handleclient.plist
+++ b/Client_pro/handleclient.plist
@@ -11,8 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/handlecarios/Handlecar_app/master/Client_pro/handleclient.ipa</string>
-				</dict>
+					<string>https://github.com/handlecarios/Handlecar_app/raw/master/Client_pro/handleclient.ipa</string>				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
