--- a/Client_pro/handleclient.plist
+++ b/Client_pro/handleclient.plist
@@ -11,28 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/handlecarios/Handlecar_app/raw/master/Client_pro/handleclient.ipa</string>				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>https://121.199.30.58/projects/AppIconImages/icon_handleclient@2x.png</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>https://121.199.30.58/projects/AppIconImages/icon_handleclient.png</string>
+					<string>https://github.com/handlecarios/Handlecar_app/raw/master/Client_pro/handleclient.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.handlecar</string>
+				<string>com.handlecar.handleclient</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
