--- a/Client_pro/handleclient.plist
+++ b/Client_pro/handleclient.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.handlecar</string>
+				<string>com.handlecar.1</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
